[project]
name = "yaml-io"
version = "0.0.2"
authors = [
{ name="Robbie Mitchell" },
]
description = "Import YAML anchors from external files, and export them for re-use in other files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License
]
license = "MIT"
license-files = ["LICENSE.md"]

[project.urls]
Github = "https://github.com/superstrong/yaml-io"
Issues = "https://github.com/superstrong/yaml-io/issues"